--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,7 +20,8 @@
     <testsuites>
         <testsuite name="D5W Extend Router Unit Test Suite">
             <directory>./tests</directory>
-            <exclude>./tests/Benchmark</exclude>
+            <exclude>./tests/Benchmark/</exclude>
+            <exclude>./tests/UnitTest/*</exclude>
         </testsuite>
     </testsuites>
 </phpunit>
