--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "d5whub/extend-router",
-    "description": "Very elegant, fast and powerful router for PHP 8.2",
-    "version": "3.0.2",
+    "description": "Very elegant, fast and powerful router for PHP",
+    "version": "4.0.0",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -25,10 +25,10 @@
         }
     },
     "require": {
-        "php": ">=8.2"
+        "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "^3.7"
+        "phpunit/phpunit": "*",
+        "squizlabs/php_codesniffer": "*"
     }
 }
